--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,6 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home
+
+org.gradle.java.installations.auto-download=true
+org.gradle.java.installations.auto-detect=true
